# saola-graphql-client

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  build.sh  create-venv.sh  install-pypi.sh  install-testpypi.sh  push-pypi.sh  push-testpypi.sh  pyproject.toml  requirements.txt  ruff.toml  run-codegen.sh
examples/: get_chats_with_crm_records.py  get_current_user.py
graphql/: chats.graphql  crm_records.graphql
graphql_client/: __init__.py  client.py  fragments.py  get_active_connections.py  get_chats_by_status.py  get_connection.py  get_source.py  get_workspace_sources.py  get_workspaces.py
saola_graphql_client/: pyproject.toml
saola_graphql_client/graphql/: chats.graphql  connections.graphql  crm_records.graphql  sessions.graphql  sources.graphql  users.graphql  workspaces.graphql
saola_graphql_client/graphql_client/: __init__.py  client.py  enums.py  fragments.py  get_chat.py  get_chat_crm_records.py  get_chats.py  get_crm_record.py  get_source_chats.py  get_user.py  get_workspace.py  get_workspace_connections.py  input_types.py  refresh_access_token.py  sign_out.py
